Fix the incorrect size values for the distorted images

--- a/04-chaining-selectors/style.css
+++ b/04-chaining-selectors/style.css
@@ -1,5 +1,5 @@
 .avatar.distorted {
-    height: auto;
+    height: 400px;
     width: 300px;
 }
 
